--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -2,7 +2,7 @@
 <head>
     <title>Title</title>
 </head>
-<link href="css/csstest.css" rel="stylesheet"/>
+<link href="../csstest.css" rel="stylesheet"/>
 <body>
 <p>welcome page is login.........</p>
 <a href="welcome.html" th:href="@{/product/add}" style="font-size: 16px;color: red">add</a>
