--- a/src/main/resources/static/csstest.css
+++ b/src/main/resources/static/csstest.css
@@ -2,7 +2,7 @@ body {
     padding: 0px;
     margin: auto;
     font-family: "黑体", "仿宋", Arial, "Arial Unicode MS", System;
-    background-color: #00F;
+    background-color: gray;
     font-size: 20px;
     text-align: left;
 }
